formatting and favicon

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: CD
 
 on:
   push:
-    paths: [ '**.svelte', '**.js' ] 
+    paths: ["**.svelte", "**.js"]
 
 jobs:
   build:
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-           node-version: 12
+          node-version: 12
       - run: npm ci
       - run: npm run build
       - uses: aws-actions/configure-aws-credentials@v1
