--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-      - run: aws s3 sync ./public s3://www.bryval.tech
+      - run: aws s3 sync ./frontend/public s3://www.bryval.tech
       - run: aws cloudfront create-invalidation --distribution-id EY8DKP6IFJJSH --paths "/*"
       - run: aws cloudfront create-invalidation --distribution-id E1ULMG9K6R52JJ --paths "/*"
