--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.1",
   "private": true,
   "scripts": {
-    "build": "rollup -c",
+    "build": "cd ./frontend && rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear"
   },
