--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,37 @@
-name: CD
+name: Continuous Deployment Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths: ["**.svelte", "**.js"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm ci
-      - run: npm run build
-      - uses: aws-actions/configure-aws-credentials@v1
+      - name: Install dependencies
+        run: | 
+            npm ci    
+            npm run build
+
+      - name: Set up AWS CLI
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-      - run: aws s3 sync ./frontend/public s3://www.bryval.tech
-      - run: aws cloudfront create-invalidation --distribution-id EY8DKP6IFJJSH --paths "/*"
-      - run: aws cloudfront create-invalidation --distribution-id E1ULMG9K6R52JJ --paths "/*"
 
+      - name: Deploy to S3
+        run: aws s3 sync ./frontend/public s3://www.bryval.tech
 
-      
+      - name: Invalidate CloudFront
+        run: |
+            aws cloudfront create-invalidation --distribution-id EY8DKP6IFJJSH --paths "/*"
+            aws cloudfront create-invalidation --distribution-id E1ULMG9K6R52JJ --paths "/*"
